--- a/archive.html
+++ b/archive.html
@@ -308,6 +308,68 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/rWl9Alr.gif"/><img src="https://i.imgur.com/rWl9Alr.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>october . 10 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <sub><img src="https://i.imgur.com/AjCu2pg.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's that time of the year again .. spring time for me, autumn time for many others...
+this post will be more springy but the next one will be halloween themed <sub><img src="https://i.imgur.com/MKoOdYL.gif"/></sub>
+
+these days has been very interesting. i'm still in the balanced mood, which is very good, but i still had some bad days ; ;
+i have a hard time dealing with dissociation from time to time .. for some reason
+i usually feel it when i see people thinking bad things of me that are not true, but it doesn't make much sense if you think about it <sub><img src="https://i.imgur.com/SE0LY2G.gif"/></sub>
+i mean,, let whoever think whatever, right !?
+easier said than done.. but of course i will not give up, i will keep trying my best to just "hmpf" over people's impressions on me !!
+it's not worth it feeling all anxious and worried about who i am just because sometimes stereotypes are stronger than my attitudes <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+i know who i am, i know i'm the best me i ever was - and becoming better - so just let people be, they don't know me <sub><img src="https://i.imgur.com/g0m1bqO.gif"/></sub>
+
+well i have many projects going on now, many things to show,, but !! i'm still finishing most of these so i'm gonna show you the recently finished stuff :
+i have this lovely drawing i painted & edited, that turned out as a very lovely wallpaper <font color="#d3a5a5" style="font-size:11px;">♡</font></pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/ybgqrgK.png"/></center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i really really like it <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+it's so so comfy too, i wish i had this quilt irl <sub><img src="https://i.imgur.com/EPCIiy7.gif"/></sub>
+
+i have been experimenting with collages and image editing a lot recently, so i ended up deciding to reorganize & customize my phone !
+this is how it turned out ( i'm very proud ) :</pre><br>
+<br><br>
+
+<center><img width="auto" height="400px" src="https://i.imgur.com/Shftace.png"/> <img width="auto" height="400px" src="https://i.imgur.com/B5wEFcC.png"/></center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the app icons look like part of the background collage, it's so cute <font color="#d3a5a5" style="font-size:11px;">♡</font>
+i made a secret folder there to put the apps i don't use a lot, not to take up unnecessary space on the main screen
+i can find everything easily now, i choosed all images carefully so there is actually a meaning behind all of these !
+and the moomin lock screen is very cute too, don't you think ?
+
+that's about it for today.. i'm preparing some very cute stuff for the next posts so keep an eye open !!
+stay safe and keep doing your best always <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+
+xoxo <sub><img src="https://i.imgur.com/UtRe6pG.gif"/></sub></pre>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/rWl9Alr.gif"/><img src="https://i.imgur.com/rWl9Alr.gif"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img src="https://i.imgur.com/WKUeBCg.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
