--- a/status.html
+++ b/status.html
@@ -312,7 +312,7 @@ z-index: 3;
 
 
 <div style="font-family: Verdana; font-size:10px; overflow-y: hidden; position: absolute; width: 150px;height: 100px;overflow-x: hidden; padding-left: 165px; padding-top: 248px; z-index: 20;"><br><br>
-<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">shy</font> <img src="https://i.imgur.com/WMKsOT0.gif">
+<img src="https://i.imgur.com/BMoFm81.gif">　<font color="#a59990" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">feeling : </font><font color="#d8b1b1" style="border-bottom:1px dashed #d8c0ad; padding-bottom: 3px;">sleepy</font> <img src="https://i.imgur.com/WMKsOT0.gif">
 <br><br><br>
 　　　　　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>　<a href="https://photos.app.goo.gl/ncZFpWGgfJPjZUHH7"target="_blank"><font color="#a59990" style="font-size:6px;">archive</font></a>　<sub><img width="12px" height="auto" src="https://i.imgur.com/tJrZd34.gif"></sub>
 </div>
@@ -322,6 +322,9 @@ z-index: 3;
 <div style="padding-left: 163px; padding-top: 130px;">
 <div style="padding: 2px; position: absolute; font-family: Verdana; font-size:10px; width: 270px; height: 120px; overflow-x: hidden; z-index: 30; text-align:justify; line-height: 100%">
 
+　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>02.01.20</sup></font> <font color="#a0acbc">→</font>　squeeze me softly
+
+<br><br><br>
 　<sub><img src="https://i.imgur.com/9LP84Nr.gif"></sub> <font color="#b7cccc" style="border-bottom:1px dashed #d8c0ad;"><sup>10.12.19</sup></font> <font color="#9cb7b7">→</font>　2020 is a neat number isn't it ?
 
 <br><br><br>
@@ -347,9 +350,6 @@ z-index: 3;
 
 <br><br><br>
 　<sub><img src="https://i.imgur.com/8j82Hn6.gif"></sub> <font color="#e0a6a6" style="border-bottom:1px dashed #d8c0ad;"><sup>25.07.19</sup></font> <font color="#c48d8d">→</font>　my love magic will heal you ♡
-
-<br><br><br>
-　<sub><img src="https://i.imgur.com/UvUc3xP.gif"></sub> <font color="#c9d5e5" style="border-bottom:1px dashed #d8c0ad;"><sup>04.07.19</sup></font> <font color="#a0acbc">→</font>　dreaming under many blankies
 
 
 
