--- a/tinyjournal.html
+++ b/tinyjournal.html
@@ -55,9 +55,7 @@ background-color: #f9f0ed;
 border: 1px dotted #e2d5d0;
 }
 #linkbjinho { color: #bca7a7; padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }
-
-</style>
+#linkzinho { padding-bottom: 2px; border-bottom:1px dotted #c6a799; }</style>
 
 <!--
 tooooooooltip
@@ -272,9 +270,7 @@ z-index: 3;
 <img src="https://i.imgur.com/Jm86w3I.png"/>
 
 <div onselectstart="return false" id="menu1">
-<p style="font-size:10px;line-height:50%;"><br><br>
-
-　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
+<p style="font-size:10px;line-height:50%;"><br><br>　　　　<font color="#c6a799">ణ</font>　<a href="/about" style="text-decoration: none; color:#a3948d;">about</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/links" style="text-decoration: none; color:#a3948d;">links</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/contact" style="text-decoration: none; color:#a3948d;">contact</a><br><br><br>
 　　　　<font color="#c6a799">ణ</font>　<a href="/credits" style="text-decoration: none; color:#a3948d;">credits</a><br><br><br>
@@ -314,6 +310,28 @@ welcome to the place where imagination and reality are mixed together !! i hope 
 </center>
 
 <br><br>
+
+<div style="text-align:left">
+<center><font color="#b79e96">
+<img src="https://i.imgur.com/B0R9I5n.png"><br><br>
+january . 07 . 2020<br>
+✄ healing heart
+</font>
+</center>
+<font color="#c9bcb1">
+<br><br>
+　　everything that hurts will be healed, sad memories will become irrelevant. i believe it.<br>
+　　slowly, gently, the little pieces of my heart are gathered like miracle, the healing magic that saved me became a gift. i believe it.<br>
+　　as long as the minimum purity remains, there is hope. please, believe me...<br>
+　　i want to share this gift and heal you as i heal.
+<br><br>
+</font>
+
+
+
+<br><br><br>
+<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
+<br><br><br>
 
 <div style="text-align:left">
 <center><font color="#ba9187">
@@ -411,52 +429,6 @@ june . 14 . 2019<br>
 <center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
 <br><br><br>
 
-<div style="text-align:left">
-<center><font color="#ba9187">
-<img src="https://i.imgur.com/TkaVrz0.png"><br><br>
-february . 10 . 2019<br>
-✄ guardian angel
-</font>
-</center>
-<font color="#C2B1B1">
-<br><br>
-
-　do you want to be a guardian angel ?<br>
-　　　　　　　　　　　　　　　　the kindest of all ..<br>
-　　　　　　　　　　　a fairy godmother ,<br>
-　　　　　　　　　　　　　　making wishes come true .<br>
-　follow these steps :<br>
-<br>
-　　ణ　always be there , for those you've choose .<br>
-　　　　　even knowing they will never see you ;<br>
-　　　　　　　　　　　　　　　　　they can't hear you .<br>
-　　　you can leave , when they no longer need you .<br>
-<br>
-　　ణ　listen to them , keep them safe and comfortable .<br>
-　　　　　　　　　　　　you can call them friends or family ,<br>
-　　　　　　but they will not be able to feel the same ;<br>
-　　　　　　　　　　　　　maybe will not even thank you .<br>
-<br>
-　　ణ　keep yourself the purest . accept who you are .<br>
-　　　you can't fly , your wings are for protection .<br>
-　　　　　　　　you halo is invisible , even for yourself .<br>
-　　　　　　　you shouldn't expect too much from others .<br>
-　　　　　　you can't get close to those you've choose ;<br>
-　　　you can probably get close to those who chose you .<br>
-<br>
-　　ణ　don't forget they can disappoint you ,<br>
-　　　　　　　　　　　　　　they can reject you .<br>
-　　　　　　　　　　　　　　　you can't always help ,<br>
-　　　　　　　　　　　you can't help everyone ,<br>
-　　　　　　　but you will know when you have to try ;<br>
-　　　　　　and it will fill your heart with love .
-<br><br>
-</font>
-
-
-<br><br><br>
-<center><font color="#b7aba8">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -</center>
-<br><br><br>
 
 
 </div>
