--- a/portfolio.html
+++ b/portfolio.html
@@ -267,10 +267,11 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital drawing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="220px" height="auto" src="https://i.imgur.com/lG5a4mE.png"><br><br>
-<img width="230px" height="auto" src="https://i.imgur.com/DClWDQW.png"><br><br>
-<img width="225px" height="auto" src="https://i.imgur.com/aE93YhS.png"><br><br>
-<img width="240px" height="auto" src="https://i.imgur.com/rjfSOYJ.png">
+<img width="auto" height="200px" src="https://i.imgur.com/wk3mNDA.png">
+<img width="auto" height="225px" src="https://i.imgur.com/Sr63dkH.png"><br><br>
+<img width="auto" height="185px" src="https://i.imgur.com/649YKdQ.png">
+<img width="auto" height="155px" src="https://i.imgur.com/duXfaS2.png">
+<img width="auto" height="140px" src="https://i.imgur.com/IELWs2w.png"><br>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -278,8 +279,10 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felt<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/GiKjvPj.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/lomMCa4.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/2l4l3vY.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/z2TL82e.jpg"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/TPM8Sq1.jpg">
+<img width="300px" height="auto" src="https://i.imgur.com/aLq96XS.gif">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -354,9 +357,10 @@ z-index: 3;
 <center>
 
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> story games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/mNmqyU6.gif"><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/SMPtGMQ.png">
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> story games / templates<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/mNmqyU6.gif"><br><br>
+<img width="400px" height="auto" src="https://i.imgur.com/GOPih9T.png"><br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/14gWkDk.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -364,11 +368,15 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> embroidery<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="250px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
+<img width="280px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
 <br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/AjepqtE.png">
+<img width="280px" height="auto" src="https://i.imgur.com/AjepqtE.png">
 <br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/YRj5yhd.png">
+<img width="280px" height="auto" src="https://i.imgur.com/N8QULfr.gif">
+<br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/YRj5yhd.png">
+<br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/cEj5v0C.gif">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
