--- a/archive.html
+++ b/archive.html
@@ -308,6 +308,98 @@ font-family: Verdana;">
 
 <br>
 
+<center><img src="https://i.imgur.com/6WRCosW.gif"/><img src="https://i.imgur.com/6WRCosW.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>october . 24 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <sub><img src="https://i.imgur.com/I69QEpR.gif"/></sub><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+happy halloween !!
+are you excited ? i'm going to eat lots of candy with bubuuuu <font color="#d3a5a5" style="font-size:11px;">♡</font>
+it's time to listen to halloween music : "dancing christmas in the 13th month" from ragnarok online & "haunted disco" from club penguin are my classic choices LOL
+for some reason the climate decided to get cold, maybe to put me into the autumn mood and feel happier !? i even got flu but i'm happy, i hope it stays like this until halloween <sub><img src="https://i.imgur.com/PIYtV1m.gif"/></sub>
+
+i'm very motivated lately and doing lots of things !!
+i have some projects going on lately but first i will keep the tradition of posting a flash game.
+every october i've been making a flash game, but for next year i'm thinking of something new ... i actually wanted to make my games work on mobile, and of course i would need to remake them into html5, and i am really not into javascript so it would be a nightmare for me ; ;
+i'll test some things and see how it turns out, bubu really likes coding so he can help me with the process.. i hope i can remake them all little by little, let's see !
+for now, if you haven't seen it yet, here is the recent game i made :</pre><br>
+<br>
+
+<center><a href="https://middlepot.com/fluffymaid" target="_blank"><img src="https://i.imgur.com/h3948vM.png"/></a></center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+click to play it ( if you're on pc ) !!
+it took me a while to draw everything but it turned out so cute, i'm very proud <font color="#bda4a4" style="font-size:8px;background-color:#fceded;letter-spacing:1px;border-radius: 10px;box-shadow: 0 0 5px #fceded;">///</font>
+and this is the melody i made for it :</pre><br>
+<br>
+
+<center><sub><sub><img src="https://i.imgur.com/RUdU6ZM.gif"/></sub></sub>　<a href="https://files.catbox.moe/szdh7c.mp3" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">care .mp3</font></a>　
+</center>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+i think it sounds very gentle.. <font color="#d3a5a5" style="font-size:11px;">♡</font>
+
+well, do you remember this game project i've been doing slowly since last year, that is halloween themed ?
+i'm still in progress of writing the script ( it's a long story, i'm writing in portuguese too and i only write once a week so yes it's taking a while ) and i've decided to make a cute html page to put it, since the original document was ugly and boring and i was honestly tired of looking at it every week....
+it's a super cute cottagecore autumn themed page where i will write the script <sub><img src="https://i.imgur.com/XumCeQR.gif"/></sub></pre><br>
+<br>
+
+<center><a href="https://pumpkin.shop.tm" target="_blank"><img width="400px" height="auto" src="https://i.imgur.com/OPFfL85.png"/></a></center><br>
+
+</font></font></font>
+
+<font size = 1><font color="#B1A69E">
+<br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+click to enter the page ! the url is really cute ( pumpkin.shop.tm )
+it looks absolutely adorable, with the leaves falling,, and i will update it maybe .... when i start making the visuals and soundtrack ?
+i don't know for sure, because i don't want to spoil the game itself by exposing too much info, but i'll tell you once i update it.
+for now you can get to know a little bit of the lovely characters that i love so very much <font color="#d3a5a5" style="font-size:11px;">♡♡</font>
+i've created them all and the main story together with bubu so this is actually a project from us both ( he will do the coding )
+i'm not sure when i will be able to finish this game but i'm not worrying too much about it since it's a side project and i'm trying to make everything calmly & patiently.. <sub><img src="https://i.imgur.com/qQhIupj.gif"/></sub>
+it's important that it's a fun process because i'm not very good with big projects, i like to finish everything quickly or i lose motivation ;;
+
+now !! i have a q&a text for today, that is a tutorial for phone customization people have been requesting since last post <font color="#d3a5a5" style="font-size:11px;">♡</font>
+it will not be a long tutorial with pictures and everything since it's actually quite an easy app to use !</pre><br>
+
+<br>
+<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
+<pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+
+first of all, you need to install this app called +home, for android ( <a text-decoration: none; href="https://play.google.com/store/apps/details?id=jp.co.a_tm.android.launcher&hl=pt" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 1px; font-size:10px;">click here</font></a> ) !!
+this is a themes app where you can download icons, backgrounds and stuff .. however you don't have to download any of that ! i've already downloaded themes to use icons and some widgets but currently i just use the default app theme ( which will replace your main screen ).
+what i do is change the background and icons for png images with transparent background i have in the gallery, and this is the biggest secret : this app is the best i know for customization because it allows you to customize everything with your own images, it's very intuitive, you just have to click and hold on the app icons and choose what you want.
+you can also change the size of the icons, the size of the letters, if you want applications to have names ( you can also rename them ) and you can make app folders and organize everything, you can also change the folder icons.
+the app drawer page ( where all of them appear ) don't have customizable icons, but you don't have to use it if you don't want to, you can just organize everything into folders on the homepage ; but important : you need to go into this app drawer area, click the settings symbol and refresh the page whenever you install any new apps or you won't be able to place the icon on your homepage ! therefore, i recommend leaving the icon of this page somewhere for easy access.
+so, basically touch and hold the main screen and try all the customization options you find until you're satisfied ! you can also place images floating on the screen with the photo widget ( they can have transparent background too )
+tip : you will only see ads while customizing some things in the settings and sometimes on the app drawer page so it's not a bother, but ads will also appear if you leave an app folder with empty space. just fill all the folders so that doesn't happen !
+</pre>
+<br><br>
+that's it for today, i hope you all have fun this halloween <font color="#d3a5a5" style="font-size:11px;">♡♡</font><br>
+be careful not to have a stomachache from eating too much candy !!<br>
+<br><br>
+<center><img src="https://i.imgur.com/l2BbcSf.gif"/></center>
+<br>
+xoxo <sub><img src="https://i.imgur.com/VlaC0nc.gif"/></sub>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/6WRCosW.gif"/><img src="https://i.imgur.com/6WRCosW.gif"/></center>
+
+<br><br><br>
+
+<br>
+
 <center><img src="https://i.imgur.com/rWl9Alr.gif"/><img src="https://i.imgur.com/rWl9Alr.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
