--- a/portfolio.html
+++ b/portfolio.html
@@ -239,7 +239,7 @@ z-index: 3;
 <img width="300px" height="auto" src="https://i.imgur.com/f0mz3xF.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/DWF38dg.png"><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/eMPybHB.png"><br><br>
-<img width="300px" height="auto" src="https://i.imgur.com/rwF28fo.png">
+<img width="300px" height="auto" src="https://i.imgur.com/De0lji0.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
