--- a/fashion.html
+++ b/fashion.html
@@ -328,6 +328,11 @@ p { margin: 0; }
 <br>
 <center>
 
+<br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 01.16.20 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="280px" height="auto" src="https://i.imgur.com/1Pqc51k.png"/><br>
+<br>
+
 <br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 12.10.19 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/egwFwwo.png"/><br>
@@ -374,11 +379,6 @@ p { margin: 0; }
 <br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.11.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="280px" height="auto" src="https://i.imgur.com/wXpMQjF.png"/><br>
-<br>
-
-<br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.08.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="280px" height="auto" src="https://i.imgur.com/DxXQre8.png"/><br>
 <br>
 
 
@@ -453,6 +453,11 @@ p { margin: 0; }
 
 <br><br><br>
 <img width="300px" height="auto" src="https://i.imgur.com/Ay48NUx.jpg"/><br><br>
+<br>
+
+
+<br><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/PKCWQOA.jpg"/><br><br>
 <br>
 
 
