--- a/gaming.html
+++ b/gaming.html
@@ -617,6 +617,64 @@ p { margin: 0; }
 <br><br><br><br>
 
 <sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
+<font color="#a37a7a">　<b>animal restaurant</b>　<font style="font-size:9px">♡</font></font><br><br>
+　　　<sub><sub><img src="https://i.imgur.com/v3VaYjZ.gif"></sub></sub>　
+<a id="linkbjinho" style="text-decoration:none; color:#af8c8c;" data-target="spoiler102" class="btn-spoiler102">my restaurant</a>
+
+
+<center>
+
+<div id="spoiler102" class="spoiler-area is-closed102">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<img width="300px" height="auto" src="https://i.imgur.com/0HvpyKx.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/Qp9ryKO.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/RJeSgDg.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/w2X8c4x.jpg"/><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/PgMDhEX.png"/>
+
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area102 {
+
+}
+.spoiler-area.is-closed102 { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler102');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "my restaurant" ){
+                this.innerHTML = "my restaurant ˣ";
+                $spoiler.classList.remove("is-closed102");
+            } else {
+                this.innerHTML = "my restaurant";
+                $spoiler.classList.add("is-closed102");
+            }
+        });
+
+    });
+
+}());
+</script>
+
+
+</center>
+
+<br><br><br>
+
+<sub><sub><img width="28px" height="auto" src="https://i.imgur.com/nX9OFvm.gif"></sub></sub>
 <font color="#a37a7a">　<b>love live</b>　<font style="font-size:9px">♡</font></font><br><br>
 　　　<sub><sub><img src="https://i.imgur.com/h01NXXS.gif"></sub></sub>　
 <a id="linkbjinho" style="text-decoration:none;" href="https://photos.app.goo.gl/4AttnWZ6Vq5EJ3dm9" target="_blank">
