--- a/poofties.html
+++ b/poofties.html
@@ -428,7 +428,8 @@ in this world i received the "middlepot" (sur)name, but i'm usually called "puf"
 in this page you can ..<br><br></font>
 <sub><sub><img src="https://i.imgur.com/u4wRgUy.gif"/></sub></sub>　<a href="/tinyjournal" id="linkbjinho" style="text-decoration: none;"><font color="#c9a89b">read random texts</a></font><br><br>
 <a href="/milkywoods" id="linkbjinho" style="text-decoration: none;"><font color="#d8abab">play little games</font></a>　<sub><sub><img src="https://i.imgur.com/sCzFf2t.gif"/></sub></sub><br><br>
-<sub><sub><img src="https://i.imgur.com/GPaxwqF.gif"/></sub></sub>　<a href="/stories" id="linkbjinho" style="text-decoration: none;"><font color="#c9a89b">watch the episodes</a></font><br>
+<sub><sub><img src="https://i.imgur.com/GPaxwqF.gif"/></sub></sub>　<a href="/stories" id="linkbjinho" style="text-decoration: none;"><font color="#c9a89b">watch the episodes</a></font><br><br>
+<a href="/notes" id="linkbjinho" style="text-decoration: none;"><font color="#d8abab">read potato's notes</font></a>　<sub><sub><img src="https://i.imgur.com/VCZvIIU.gif"/></sub></sub><br>
 
 <br><br>
 
